--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -51,24 +51,28 @@ Shuang Zhang
 \maketitle
 
 \section{Project Context and Objectives}
-%The Lighthouse team which consists of 8 MSc students of UCL was Who is your client? What problem did you have to solve? Why is that problem interesting or important?The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the living experience for the visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals, the project aimed to relief the lack of available guide dogs in the UK and help the visually impaired participate in the society without relying on others the same way as the non-visually impaired. Microsoft is both the sponsor and the client in this project. The particular field of study that the client wanted the team to explore was using wearable sensors which could be utilised by the visually impaired. Also, the client wanted low-cost, off-of-shelf hardware in this project. After analysing the requirements from the client, the Lighthouse team decided to find a way to improve the experience of visually impaired when entering an unfamiliar indoor environment. Finally, in this project, the magnetic sensor in the smartphone, the infrared sensor, the ultrasound sensor, camera were used with sensor fusion method, which is combining the data from all kinds of sensors and computing to get a better result than relying on the each type of sensor individually.
+%The Lighthouse team which consists of 8 MSc students of UCL was Who is your client? What problem did you have to solve? Why is that problem interesting or important?The Lighthouse team collaborated with Microsoft and the Guide Dog Associations to produce applications which can improve the living experience for the visually impaired users. Since few environments and applications were designed for the huge amount of blind and partly sighted individuals, the project aimed to relief the lack of available guide dogs in the UK and help the visually impaired participate in the society without relying on others the same way as the non-visually impaired. Microsoft is both the sponsor and the client in this project. The particular field of study that the client wanted the team to explore was using wearable sensors which could be utilised by the visually impaired. Also, the client wanted low-cost, off-of-shelf hardware in this project. After analysing the requirements from the client, the Lighthouse team decided to find a way to improve the experience of visually impaired when entering an unfamiliar indoor environment.In this project, the magnetic sensor in the Android phones, the infrared sensor, the ultrasound sensor, camera were used with sensor fusion method, which is combining the data from all kinds of sensors and computing to get a better result than relying on the each type of sensor individually.
+Finally, Lighthouse team created a platform for dynamic indoor obstacles mapping, which included an Obstacle API, a processing platform and an Android application to give user feedback. After testing, the quality of the project meet client's standards.
+
 \section{Achievements}
 %What software and other artifacts have you delivered?
 \subsection{API}
-API provides communication between sensors and platform
+Obstacle API in this project provided communication between sensors and processing platform. 
 \subsection{Processing platform}
-process data and store data for further query
+The processing platform is based on Spark, 
 \subsection{Android application}
-give user feedback of surroundings by querying the database
+An android application can show user's the details of the surroundings.
 \section{Evaluation}
 %What evaluation have you done? What are the results of your evaluations?(Be specific; give numbers!)
 \section{Impact}
-%What are the impacts of your work for your client and other stakeholders?
+Microsoft
+
+For visually impaired users, this product helped to solve the problems they meet in an unfamiliar indoor environment. With this product, the blind people and partly-sighted people will no longer depend on others. This project not only help with the
 \section{Challenges}
 %Was your project subject to significant constraints and difficulties (technical, organisational, logistics, etc.)? How did you respond to these constraints and difficulties?
 \section{Lessons Learnt}
-%What can other software engineers learn from your experience in this project? (take away messages)\subsection{Management}
-\subsection{Architecture design}
+%What can other software engineers learn from your experience in this project? (take away messages)
+
 \end{document}
 
 
