--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -297,6 +297,23 @@ The last step involves a second pass of sensor fusion that consumes batches of r
 Cassandra is a highly performant, distributed NoSQL database that offers the same throughput and scalability as the other Apache products discussed in previous sections. The obstacles identified by the processing pipeline are stored in a table that contains the location, confidence and ID of an obstacle.
 
 The feedback applications can then query Cassandra for obstacles by calling the Obstacle API. This API is a REST web service written in Java that queries the table in Cassandra and exposes a simple interface to the feedback applications.
+\subsection{Testing strategy}
+To test if the quality of the Lighthouse project meets the standard of the client, testing procedures were made via experience. Since different components of the architecture have different feature to test, unit, load and integration tests were implemented separately.
+
+\subsubsection{Unit testing}
+Unit testing is a kind of software process where small parts of the application are tested individually and independently to check if they are in proper operation.\cite{cheon2002simple} In Lighthouse project, unit testing was used for Obstacle API which had several logic components. Each logic was tested with actual data independently to assure each part run the correct logic.
+
+\subsubsection{Load testing}
+Load testing is a process of putting demand and checking response, which will be undertaken in both normal conditions and overload conditions. (add citation) For the components which deal with input and output stream, load testing is a useful testing strategy.
+First, the Kafka component which managed the message queue in the project was tested with different amount data simulated by code. Then, load testing will be performed on Spark processing throughput, since the entire processing pipeline needs to be checked for bottlenecks which will affect the response time of the whole project. Also, load testing is used to test the Obstacle API to make sure the API stands up to a minimum level of pressure expected in our quality requirements.
+
+\subsubsection{Integration testing}
+Integration testing is a test strategy where individual parts of the project are combined and testing together as a group.\cite{jorgensen1994object} Integration testing can show how the whole project works via testing the interfaces between components, interactions to different parts of the system. 
+Since the dependency of the processing component on the Spark environment creates real problems to unit testing, integration tests were found to be sufficient to assure the team that the processing is producing the correct results when the unit testing is hard to perform.
+Integration testing will be carried out after all the tests mentioned above to check if the processing is producing the correct output.
+\subsubsection{Other testing}
+Besides all the testing methods above, other tests were also used in this project. For the data collection part, accuracy and response time are the most important feature to be tested. The latency will be tested by recording the time when sending the data and the time when getting the response. Overall 20 testing will be taken, and the average result is the latency. To test the accuracy, the actual accuracy will be measured by calculating the distance between the actual user location and the Indoor Atlas result.
+
 
 
 % ======================================================================================================================================================
@@ -391,23 +408,6 @@ The feedback applications can then query Cassandra for obstacles by calling the 
 
 \section{Evaluation}
 Given the nature of the project the main success criteria is if the system can accurately determine the location of an obstacle in space based on the sensor data given. The evaluation of this fact was done by doing experiments with the actual sensor hardware, extracting the noise level, accuracy and other quality metrics and then generating sensor output based on those metrics. This generation of test data allowed us to evaluate the accuracy of our system in a controlled environment. We evaluated the robustness of our processing methods by increasing the noise in the generated sensor signal in addition to controlling the rate of data sent to the system. The throughput of the system was also evaluated by sending large amounts of sensor readings at a time and measuring response time, packet loss and transmission delay.
-
-\section{Testing strategy}
-To test if the quality of the Lighthouse project meets the standard of the client, testing procedures were made via experience. Since different components of the architecture have different feature to test, unit, load and integration tests were implemented separately.
-
-\subsection{Unit testing}
-Unit testing is a kind of software process where small parts of the application are tested individually and independently to check if they are in proper operation.\cite{cheon2002simple} In Lighthouse project, unit testing was used for Obstacle API which had several logic components. Each logic was tested with actual data independently to assure each part run the correct logic.
-
-\subsection{Load testing}
-Load testing is a process of putting demand and checking response, which will be undertaken in both normal conditions and overload conditions. (add citation) For the components which deal with input and output stream, load testing is a useful testing strategy.
-First, the Kafka component which managed the message queue in the project was tested with different amount data simulated by code. Then, load testing will be performed on Spark processing throughput, since the entire processing pipeline needs to be checked for bottlenecks which will affect the response time of the whole project. Also, load testing is used to test the Obstacle API to make sure the API stands up to a minimum level of pressure expected in our quality requirements.
-
-\subsection{Integration testing}
-Integration testing is a test strategy where individual parts of the project are combined and testing together as a group.\cite{jorgensen1994object} Integration testing can show how the whole project works via testing the interfaces between components, interactions to different parts of the system. 
-Since the dependency of the processing component on the Spark environment creates real problems to unit testing, integration tests were found to be sufficient to assure the team that the processing is producing the correct results when the unit testing is hard to perform.
-Integration testing will be carried out after all the tests mentioned above to check if the processing is producing the correct output.
-\subsection{Other testing}
-Besides all the testing methods above, other tests were also used in this project. For the data collection part, accuracy and response time are the most important feature to be tested. The latency will be tested by recording the time when sending the data and the time when getting the response. Overall 20 testing will be taken, and the average result is the latency. To test the accuracy, the actual accuracy will be measured by calculating the distance between the actual user location and the Indoor Atlas result.
 
 
 \subsection{Tools and Data generation}
