--- a/2-PageSummary/Summary.tex
+++ b/2-PageSummary/Summary.tex
@@ -65,9 +65,9 @@ An android application can show user's the details of the surroundings.
 \section{Evaluation}
 %What evaluation have you done? What are the results of your evaluations?(Be specific; give numbers!)
 \section{Impact}
-Microsoft
+Microsoft will
 
-For visually impaired users, this product helped to solve the problems they meet in an unfamiliar indoor environment. With this product, the blind people and partly-sighted people will no longer depend on others. This project not only help with the
+For visually impaired users, this product helped to solve the problems they meet in an unfamiliar indoor environment. With this product, the blind people and partly-sighted people will no longer depend on others. This project not only help with them moving around without barriers but also enrich their living experience with higher confidence.
 \section{Challenges}
 %Was your project subject to significant constraints and difficulties (technical, organisational, logistics, etc.)? How did you respond to these constraints and difficulties?
 \section{Lessons Learnt}
