--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -315,22 +315,93 @@ The last step involves a second pass of sensor fusion that consumes batches of r
 Cassandra is a highly performant, distributed NoSQL database that offers the same throughput and scalability as the other Apache products discussed in previous sections. The obstacles identified by the processing pipeline are stored in a table that contains the location, confidence and ID of an obstacle.
 
 The feedback applications can then query Cassandra for obstacles by calling the Obstacle API. This API is a REST web service written in Java that queries the table in Cassandra and exposes a simple interface to the feedback applications.
+
+
 \subsection{Testing strategy}
-To test if the quality of the Lighthouse project meets the standard of the client, testing procedures were made via experience. Since different components of the architecture have different feature to test, unit, load and integration tests were implemented separately.
+%TODO: Prioritise these subsections
+To test if the quality of the Lighthouse project meets the standard of the client, testing procedures were designed and implemented throughout the platform. Since different components of the architecture have different feature to test, unit, load and integration tests were implemented separately.
+
+\subsubsection{Tools and Data generation}
+The data was generated through a simulation script written in Python. The simulation was set up by specifying an agent, some obstacles and a set of sensors. The agent and obstacles would have a location in space and the agent had a maximum velocity, rotation speed and other movement parameters. The simulation would then be configured by laying out a path for the agent to move through while the sensors were polled to check if they would detect an obstacle. The simulation allowed for noise to be added to the sensor readings that would give a more realistic way of processing sensor data that will inherently contain error and noise.
 
 \subsubsection{Unit testing}
-Unit testing is a kind of software process where small parts of the application are tested individually and independently to check if they are in proper operation.\cite{cheon2002simple} In Lighthouse project, unit testing was used for Obstacle API which had several logic components. Each logic was tested with actual data independently to assure each part run the correct logic.
+Unit testing was used for Obstacle API which had several logic components. Each piece of logic was tested with actual data independently to assure that the output was as expected. The unit tests were run after each push to the Git repostitory through the Jenkins continous integration platform.
+
+\textcolor{orange}{Add metrics}
 
 \subsubsection{Load testing}
-Load testing is a process of putting demand and checking response, which will be undertaken in both normal conditions and overload conditions. (add citation) For the components which deal with input and output stream, load testing is a useful testing strategy.
-First, the Kafka component which managed the message queue in the project was tested with different amount data simulated by code. Then, load testing will be performed on Spark processing throughput, since the entire processing pipeline needs to be checked for bottlenecks which will affect the response time of the whole project. Also, load testing is used to test the Obstacle API to make sure the API stands up to a minimum level of pressure expected in our quality requirements.
+After implementing the processing pipeline the first performance test performed was to evaluate the throughput and packet loss. This was done by sending progressively larger numbers of simulated sensor readings to the pipeline and measure how it handled the load.
+
+\begin{center}
+\begin{tabularx}{\textwidth}{| X | X | X | X |} 
+\hline
+\# Readings & Transmission time & \# Readings/Second & Packet Loss \% \\
+\hline
+7400 & 2.220366535 & 3332.783071 & 1.135135135 \\
+\hline
+74000 & 15.81466027 & 4678.380612 & 0.7731087894 \\
+\hline
+740000 & 119.9508543 & 5738.18339 & 5.847595525 \\
+\hline
+\end{tabularx}
+\label{tab:performance}
+\end{center}
+%TODO: Label and reference the table
+
+The results shown in table~\ref{tab:performance} show that the pipeline handled loads far beyond what was stipulated in the quality requirements, the packet loss is within acceptable limits (2\%) for over 100000 readings and the throughput was an order of magnitude higher than the goal. The quality requirements needed the pipeline to handle 100 readings per second but the load testing showed that the pipeline could handle over 5000 messages before it started to experience deteriorating performance.
 
 \subsubsection{Integration testing}
-Integration testing is a test strategy where individual parts of the project are combined and testing together as a group.\cite{jorgensen1994object} Integration testing can show how the whole project works via testing the interfaces between components, interactions to different parts of the system. 
-Since the dependency of the processing component on the Spark environment creates real problems to unit testing, integration tests were found to be sufficient to assure the team that the processing is producing the correct results when the unit testing is hard to perform.
-Integration testing will be carried out after all the tests mentioned above to check if the processing is producing the correct output.
+Since the dependency of the processing component on the Spark environment creates  problems to unit testing, integration tests were found to be sufficient to assure the team that the processing is producing the correct results when the unit testing is hard to perform. Integration tests were performed by sending a simulated scenario of sensor readings through the processing pipeline to evaluate the obstacle detection accuracy. The simulated output was varied with respect to samling frequency, data rate and noise in the signal.
+\textcolor{orange}{Numbers here}
+Results show that the sensor fusion performed on the input manages to mitigate the noise up to a limit and provides much better results than when the processing pipeline is run without fusion.
+
 \subsubsection{Other testing}
-Besides all the testing methods above, other tests were also used in this project. For the data collection part, accuracy and response time are the most important feature to be tested. The latency will be tested by recording the time when sending the data and the time when getting the response. Overall 20 testing will be taken, and the average result is the latency. To test the accuracy, the actual accuracy will be measured by calculating the distance between the actual user location and the Indoor Atlas result.
+The accuracy of the Indoor Atlas data collection application was done by comparing the location of an Android device given by the SDK with the actual measured location.
+\textcolor{orange}{Numbers here}
+
+\subsubsection{Android application}
+\textcolor{orange}{Do we need this, this is not the right place for this.}
+We decided to program in an android environment because the team is more familiar with programming in Java as opposed to C\# and Objective C/Swift for Windows phone and IOS respectively. Moreover the team decided to use Java in building the components of our overall architecture, so it will be a good fit for the team to keep everything Java. Additionally the team helped with dealing with bugs, syntax and programming logic because we all focused on leveraging one programming language. This helped the team work together in an environment everyone was comfortable with and limit the risk posed to the project that comes with the team learning a new environment during development.
+
+% \begin{figure}
+% \centering
+% \subfigure[Figure 1] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \subfigure[Figure 2] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \subfigure[Figure 3] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \caption{A figure with two subfigures}
+% \label{fig:test}
+
+% \subfigure[Figure 4] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \subfigure[Figure 5] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \subfigure[Figure 6] {
+%   \label{fig:sub1}
+%   \includegraphics[width=.3\linewidth]{burndown-chart}
+% }
+% \caption{A figure with two subfigures}
+% \label{fig:test}
+% \end{figure}
+
+\subsubsection{Detection accuracy}
+Describe the testing scenario, the simulator and show diagrams that compare both.
+\textcolor{orange}{More to come}
+
+\subsection{Acceptance}
+\textcolor{orange}{More to come}
 
 
 
@@ -427,91 +498,6 @@ Besides all the testing methods above, other tests were also used in this projec
 \section{Evaluation}
 Given the nature of the project the main success criteria is if the system can accurately determine the location of an obstacle in space based on the sensor data given. The evaluation of this fact was done by performing experiments with the actual sensor hardware, extracting the noise level, accuracy and other quality metrics and then generating sensor output based on those metrics. This generation of test data allowed us to evaluate the accuracy of our system in a controlled environment. We evaluated the robustness of our processing methods by increasing the noise in the generated sensor signal in addition to controlling the rate of data sent to the system. The throughput of the system was also evaluated by sending large amounts of sensor readings at a time and measuring response time, packet loss and transmission delay.
 
-\subsection{Testing strategy}
-%TODO: Prioritise these subsections
-To test if the quality of the Lighthouse project meets the standard of the client, testing procedures were designed and implemented throughout the platform. Since different components of the architecture have different feature to test, unit, load and integration tests were implemented separately.
-
-\susubbsection{Tools and Data generation}
-The data was generated through a simulation script written in Python. The simulation was set up by specifying an agent, some obstacles and a set of sensors. The agent and obstacles would have a location in space and the agent had a maximum velocity, rotation speed and other movement parameters. The simulation would then be configured by laying out a path for the agent to move through while the sensors were polled to check if they would detect an obstacle. The simulation allowed for noise to be added to the sensor readings that would give a more realistic way of processing sensor data that will inherently contain error and noise.
-
-\subsubsection{Unit testing}
-Unit testing was used for Obstacle API which had several logic components. Each piece of logic was tested with actual data independently to assure that the output was as expected. The unit tests were run after each checking to the Git repostitory through the Jenkins continous integration platform.
-
-\textcolor{orange}{Add metrics}
-
-\subsubsection{Load testing}
-After implementing the processing pipeline the first performance test performed was to evaluate the throughput and packet loss. This was done by sending progressively larger numbers of simulated sensor readings to the pipeline and measure how it handled the load.
-
-\begin{center}
-\begin{tabularx}{\textwidth}{| X | X | X | X |} 
-\hline
-\# Readings & Transmission time & \# Readings/Second & Packet Loss \% \\
-\hline
-7400 & 2.220366535 & 3332.783071 & 1.135135135 \\
-\hline
-74000 & 15.81466027 & 4678.380612 & 0.7731087894 \\
-\hline
-740000 & 119.9508543 & 5738.18339 & 5.847595525 \\
-\hline
-\end{tabularx}
-\label{tab:performance}
-\end{center}
-%TODO: Label and reference the table
-
-The results shown in table~\ref{tab:performance} show that the pipeline handled loads far beyond what was stipulated in the quality requirements, the packet loss is within acceptable limits (2\%) for over 100000 readings and the throughput was an order of magnitude higher than the goal. The quality requirements needed the pipeline to handle 100 readings per second but the load testing showed that the pipeline could handle over 5000 messages before it started to experience deteriorating performance.
-
-\subsubsection{Integration testing}
-Since the dependency of the processing component on the Spark environment creates  problems to unit testing, integration tests were found to be sufficient to assure the team that the processing is producing the correct results when the unit testing is hard to perform. Integration tests were performed by sending a simulated scenario of sensor readings through the processing pipeline to evaluate the obstacle detection accuracy. The simulated output was varied with respect to samling frequency, data rate and noise in the signal.
-\textcolor{orange}{Numbers here}
-Results show that the sensor fusion performed on the input manages to mitigate the noise up to a limit and provides much better results than when the processing pipeline is run without fusion.
-
-\subsubsection{Other testing}
-The accuracy of the Indoor Atlas data collection application was done by comparing the location of an Android device given by the SDK with the actual measured location.
-\textcolor{orange}{Numbers here}
-
-\subsubsection{Android application}
-\textcolor{orange}{Do we need this, this is not the right place for this.}
-We decided to program in an android environment because the team is more familiar with programming in Java as opposed to C\# and Objective C/Swift for Windows phone and IOS respectively. Moreover the team decided to use Java in building the components of our overall architecture, so it will be a good fit for the team to keep everything Java. Additionally the team helped with dealing with bugs, syntax and programming logic because we all focused on leveraging one programming language. This helped the team work together in an environment everyone was comfortable with and limit the risk posed to the project that comes with the team learning a new environment during development.
-
-% \begin{figure}
-% \centering
-% \subfigure[Figure 1] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \subfigure[Figure 2] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \subfigure[Figure 3] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \caption{A figure with two subfigures}
-% \label{fig:test}
-
-% \subfigure[Figure 4] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \subfigure[Figure 5] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \subfigure[Figure 6] {
-%   \label{fig:sub1}
-%   \includegraphics[width=.3\linewidth]{burndown-chart}
-% }
-% \caption{A figure with two subfigures}
-% \label{fig:test}
-% \end{figure}
-
-\subsubsection{Detection accuracy}
-Describe the testing scenario, the simulator and show diagrams that compare both.
-\textcolor{orange}{More to come}
-
-\subsubsection{Acceptance}
-\textcolor{orange}{More to come}
 %TODO: Talk about the cs students evaluation?
 
 \section{Challenges and Lessons Learnt}
