--- a/GroupReport/GroupReport.tex
+++ b/GroupReport/GroupReport.tex
@@ -561,7 +561,10 @@ This project can be migrated to Azure which is a Microsoft product and can provi
 
 
 \section{Conclusion}
-\textcolor{orange}{Need a short section that drives through the impact and client value}
+Moving around without others’ assistance in an unfamiliar environment is always a challenge for the visually impaired especially in a place where the obstacles are changing. To solve this problem, the Lighthouse team managed to deliver a product which consists of data collection component with sensors, data processing platform and feedback component build in Android. The sensors which include the magnetic sensor in Android phone, infrared sensor, ultrasound sensor and camera collected data of environment and sent them to processing platform via Kafka. After processing, the Android application showed the details of surroundings to users. In testing, each component in this project showed satisfied quality which met most of the requirements from stakeholders. 
+
+Both Microsoft and the visually impaired people can benefit from the Lighthouse project. First, it can help Microsoft enlarge the market for the visually impaired since there is an enormous amount of people living with sight loss. Second, the Lighthouse project provides a prototype which is both low-cost and easy to deploy to help Microsoft economise the funds. Also, for visually impaired users, the Lighthouse project not only assist them get details of surroundings but also enrich their confidence to explore the world on their own. 
+
 
 % TODO: identify the topic takeaway messages.
 % takeaway messages describe how we one could do things differently.
